Ishrak-Howlader-24241304/task2/turtle_ws/log/build_2025-07-13_21-44-50/turtle_control/stderr.log
/home/sameer/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:289: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/home/sameer/turtle_ws/install/turtle_control/lib/python3.10/site-packages/turtle_control/turtle_controller.py", line 70
    def l
         ^
SyntaxError: invalid syntax

